--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 .hero-slider {
     position: relative;
-    padding-top: 8.125rem;
-    padding-bottom: 8.125rem;
+    padding:0;
+    min-height:16.250rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
@@ -19,7 +19,10 @@
 .hero.cake{
   background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../img/hero-cake.jpg');
 }
-.hero.mixing,.hero.mixing,.hero.cake{
+.hero.eating{
+  background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../img/top-hero.jpg');
+}
+.hero.mixing,.hero.eating,.hero.cake{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
