--- a/css/custom.css
+++ b/css/custom.css
@@ -61,6 +61,11 @@
   margin:6rem 0;
 }
 
+header#topnavheader{ height:56px; display:block; }
+header#topnavheader nav.navbar{ position: fixed; top: 0; z-index: 9999; width: 100%; background: #C90070; }
+header#topnavheader nav.navbar a{ color:white; cursor:pointer; }
+header#topnavheader nav.navbar .navbar-toggler {background:white;}
+header#topnavheader nav.navbar .navbar-toggler-icon i {font-size: 1.6rem; line-height: 1.2;}
 
 footer{
   background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url('../img/footer.jpg');
