--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,5 @@
+h1.display-3{ font-size:3.5rem; }
+
 .hero-slider {
     position: relative;
     padding:0;
@@ -36,7 +38,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(150, 72, 115, 0.6);/*rgba(201, 0, 112, 0.2);*/
+  background: rgba(70,50,50, 0.6);/*rgba(150, 72, 115, 0.6);*/
 }
 .bg-gradient-overlay2 {
   position: absolute;
