--- a/css/main.css
+++ b/css/main.css
@@ -9,282 +9,129 @@
 
  
 /* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
+	 Base styles: opinionated defaults
+	 ========================================================================== */
 
-   html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+html {
+	font-size: 62.5%;
+}
+body{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.4rem;
+	color: #646464;
+	font-weight: 300;
+}
+*:focus {
+	outline: none;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
+img{ max-width: 100%; }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+h1, h2, h3, h4, h5, h6, .sh-heading span.sh-heading-content {
+	font-family: "Cormorant Garamond";
+	color: #3e3e3e;
+	font-weight: 700;
+	padding: 0;
+	margin: 0;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+section.full-height{
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+	margin-bottom: 10vh;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
+a.scroll-to{
+	position: absolute;
+	top: 0;
 }
 
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+.flex-v-align{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-/*
- * Allow only vertical resizing of textareas.
- */
+h1{
+	font-family: "Cormorant Garamond";
+	color: white;
+	font-style: italic;
+	text-decoration: none;
+	white-space: nowrap;
+	min-height: 0px;
+	min-width: 0px;
+	max-height: none;
+	max-width: none;
+	letter-spacing: 0px;
+	font-weight: 700;
+	font-size: 10rem;
+}
+h2{
+	font-family: "Cormorant Garamond";
+	color: #3e3e3e;
+	font-weight: 700;
+	font-size: 5rem;
+}
+h3{
+	font-family: "Cormorant Garamond";
+	font-weight: 400;
+	font-size: 3.8rem;
+}
+strong{ font-weight: 700; }
 
-textarea {
-    resize: vertical;
+div.title-divider{
+	position: relative;
+	font-size: 2rem;
+}
+div.title-divider:before {
+	margin-left: -60px;
+	text-align: right;
+}
+div.title-divider:after {
+	margin-left: 10px;
+}
+div.title-divider:before, div.title-divider:after {
+	position: absolute;
+	top: 50%;
+	overflow: hidden;
+	width: 50px;
+	height: 1px;
+	content: '';
+	border-top: 1px solid #e5e5e5;
+	margin-top: 0;
 }
 
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.container {
+	padding-left: 0!important;
+	padding-right: 0!important;
+	margin: 0 auto;
+	width: 100%;
 }
 
+.mtop-large{ margin-top: 6rem }
+.mbot-large{ margin-bottom: 6rem }
+.center, .align-center{ text-align: center; }
+.align-right{ text-align: right; }
 
+.animate-in-viewport{ opacity: 0; }
 
-
- /* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- /* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
- .hidden {
-  display: none !important;
-}
-
-/*
-* Hide only visually, but have it available for screen readers:
-* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
-*
-* 1. For long content, line feeds are not interpreted as spaces and small width
-*    causes content to wrap 1 word per line:
-*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
-*/
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap; /* 1 */
-}
-
-/*
-* Extends the .visuallyhidden class to allow the element
-* to be focusable when navigated to via the keyboard:
-* https://www.drupal.org/node/897638
-*/
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-  white-space: inherit;
-}
-
-/*
-* Hide visually and from screen readers, but maintain layout
-*/
-
-.invisible {
-  visibility: hidden;
-}
-
-/*
-* Clearfix: contain floats
-*
-* For modern browsers
-* 1. The space content is one way to avoid an Opera bug when the
-*    `contenteditable` attribute is included anywhere else in the document.
-*    Otherwise it causes space to appear at the top and bottom of elements
-*    that receive the `clearfix` class.
-* 2. The use of `table` rather than `block` is only necessary if using
-*    `:before` to contain the top-margins of child elements.
-*/
-
-.clearfix:before,
-.clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
-}
-
-.clearfix:after {
-  clear: both;
-}
-
- 
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-   @media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
- 
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-   @media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster */
-        -webkit-box-shadow: none !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre {
-        white-space: pre-wrap !important;
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+footer {
+	background-color: #393939;
+	color: #ffffff;
+	padding: 0px;
 }
 
 
+@media (min-width: 900px) {
+	.container {
+		max-width: 970px;
+	}
+}
+@media (min-width: 1250px) {
+	.container {
+		max-width: 1200px!important;
+		width: 1200px!important;
+	}
+}
