--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -49,6 +49,7 @@
   height: auto;
   z-index: 1000;
 }
+#topnavheader.scrolled img.header-logo{ width: 40px; }
 
 .main-menu {
   width: 100%;
@@ -67,6 +68,9 @@
   margin: 120px 0 0 0;
   padding: 0;
   text-align: center;
+}
+#topnavheader.scrolled .main-menu ul {
+  margin: 75px 0 0 0;
 }
 
 .main-menu a {
@@ -93,7 +97,7 @@
 .main-menu .menu-close {
   position: absolute;
   right: 34px;
-  top: 51px;
+  top: 31px;
   border: 0;
   font-size: 1.8rem;
   padding: 0;
@@ -110,8 +114,8 @@
 #topnavheader.scrolled .main-menu a{ color: rgba(255,255,255,0.8); }
 #topnavheader.scrolled .main-menu a:hover{ color: white; }
 
-#topnavheader.scrolled a#main-menu-toggle, #topnavheader.scrolled a#main-menu-close{ color: rgba(69,69,69,0.8); }
-#topnavheader.scrolled a#main-menu-toggle:hover, #topnavheader.scrolled a#main-menu-close:hover{ color: rgba(69,69,69,1); }
+#topnavheader.scrolled a#main-menu-toggle{ color: rgba(69,69,69,0.8); }
+#topnavheader.scrolled a#main-menu-toggle:hover{ color: rgba(69,69,69,1); }
 
 /*
  On small devices, allow it to toggle...
@@ -171,6 +175,7 @@
 }
 .nav-social span {
   margin-right: 10px;
+  cursor: pointer;
 }
 .nav-social span:last-child {
   margin-right: 0px;
@@ -200,12 +205,14 @@
   
   /* Undo positioning of off-canvas menu */
   .main-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     flex-grow: 1;
     position: relative;
 		left: auto;
 		top: auto;
 		height: auto;
-    display: block;
     background: none;
   }
   
@@ -232,8 +239,22 @@
     background: none; /* Remove background from off-canvas styling */
   }
 
-  #topnavheader.scrolled .main-menu a{ color: rgba(69,69,69,0.8); }
-  #topnavheader.scrolled .main-menu a:hover{ color: rgba(69,69,69,1); }
+  .nav-social span{ color: rgba(255,255,255,0.8); }
+  .nav-social span:hover{ color: rgba(255,255,255,1); }
+  #topnavheader.scrolled .main-menu a, #topnavheader.scrolled .nav-social span{ color: rgba(69,69,69,0.8); }
+  #topnavheader.scrolled .main-menu a:hover, #topnavheader.scrolled .nav-social span:hover{ color: rgba(69,69,69,1); }
+
+  
+  .nav-social {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    width: auto;
+    bottom: 0;
+  }
+  .nav-social span{
+    font-size: 1.4rem;
+  }
 }
 
 /*
