style fixes and moved logo to top section

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,13 @@
   visibility: inherit;
 }
 
+#homeHero img.logo{
+  width: 60%;
+  max-width: 350px;
+  opacity: 0.8;
+  margin: 0 0 5rem 0;
+}
+
 
 
 h1.display-3{ font-size:3.5rem; }
@@ -137,8 +144,9 @@ div.flex-content-column{
   flex-basis: 0;
   padding: 1rem;
   position: relative;
+  margin-top: 5rem;
 }
-div.flex-content-column h3{ font-size: 3rem; margin-bottom: 3rem; }
+div.flex-content-column h3{ font-size: 3rem; margin-bottom: 1.2rem; }
 div.circular-img{
   width:100%;
   padding-top:100%;
