--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -12,9 +12,9 @@
 /* Button styling */
 .menu-toggle {
   display: inline-block;
-  padding: .75em 15px;
+  padding: 0 15px;
   line-height: 1em;
-  font-size: 1em;
+  font-size: 3em;
   color: rgba(255,255,255,0.8);
 }
 .menu-toggle:hover,
@@ -23,9 +23,9 @@
 }
 
 .menu-close {
-  padding: .75em 15px;
+  padding: 0 15px;
   line-height: 1em;
-  font-size: 1em;
+  font-size: 3em;
   color: rgba(255,255,255,0.8);
 }
 .menu-close:hover,
@@ -47,9 +47,17 @@
 #topnavheader img.header-logo{
   width: 80px;
   height: auto;
-  z-index: 1000;
+  z-index: 1;
 }
 #topnavheader.scrolled img.header-logo{ width: 40px; }
+
+#topnavheader .web-logo img.header-logo { display: none; }
+#topnavheader.scrolled .web-logo img.header-logo { display: block; }
+
+#topnavheader .menu-logo img.header-logo{
+  float: left;
+  margin: 17px;
+}
 
 .main-menu {
   width: 100%;
@@ -79,7 +87,6 @@
   color:rgba(255,255,255,0.8);
   text-decoration: none;
   font-weight: 700;
-  font-size: 1.2rem;
   text-decoration: none;
   border-top: 1px solid #383838;
 }
@@ -96,10 +103,9 @@
 
 .main-menu .menu-close {
   position: absolute;
-  right: 34px;
-  top: 31px;
+  right: 37px;
+  top: 20px;
   border: 0;
-  font-size: 1.8rem;
   padding: 0;
 }
 .main-menu .menu-close:hover,
@@ -194,9 +200,13 @@
  Horizontal menu
 */
 @media (min-width: 725px) {
+  #topnavheader .menu-logo{
+    display: none;
+  }
   .main-menu:target,
   .main-menu[aria-expanded="true"] {
     box-shadow: none;
+    display: flex;
   }
   .menu-toggle,
   .main-menu .menu-close {
@@ -235,6 +245,7 @@
   .main-menu a {
     border: 0 !important; /* Remove borders from off-canvas styling */
     padding: .75em 15px;
+    font-size: 1.2rem;
   }
   
   .main-menu a:hover,
