--- a/css/custom-mobile.css
+++ b/css/custom-mobile.css
@@ -45,15 +45,15 @@ div.circular-img {
 
 div.flex-content-column.background-img{
 	width: 100%;
-	height: 20vh;
-	min-height: 20vh;
+	height: 200px;
+	min-height: 200px;
 	margin-bottom: 2rem;
 }
 div.flex-content-column.background-img.left,
 div.flex-content-column.background-img.right{
 	border-radius: 0;
 }
-#aboutWelcome, #aboutChef{ flex: auto; }
+#aboutWelcome, #aboutChef{ flex: auto; flex-grow: 0; }
 #aboutWelcome .flex-content-middle{ text-align: center; }
 #aboutChef .flex-content-middle{ text-align: center; }
 
